// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <div
        align="center"
        class="button_cont"
      >
        <a
          class="example_e"
          href="/create"
        >
          Add Expense
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensSummary with 1 expense 2`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        32
      </span>
       
      expenses
       totalling 
      <span>
        $23,532,141.34
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <div
        align="center"
        class="button_cont"
      >
        <a
          class="example_e"
          href="/create"
        >
          Add Expense
        </a>
      </div>
    </div>
  </div>
</div>
`;
